--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -14,12 +14,15 @@ RUN apt-get update && apt-get install -y  \
     libfreetype6-dev \
     libjpeg-dev \
     libpng12-dev \
+    uwsgi-plugin-python \
     --no-install-recommends
 
 RUN pip install virtualenv
-
 ADD init /init
-WORKDIR /app
 
-VOLUME  ["/app/src", "/app/env"]
+RUN useradd --create-home app
+USER app
+WORKDIR /home/app
+
+VOLUME  ["/home/app/src", "/home/app/env"]
 CMD     ["/init"]
