--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -25,5 +25,6 @@ USER app
 WORKDIR /home/app
 RUN virtualenv --system-site-packages env
 
-VOLUME  ["/home/app/src", "/home/app/env"]
-CMD     ["/init"]
+VOLUME ["/home/app/src", "/home/app/env"]
+
+CMD /init
