--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -6,6 +6,7 @@ FROM       debian:jessie
 MAINTAINER Andrey Petrov "andrey.petrov@shazow.net"
 
 RUN apt-get update && apt-get install -y  \
+    build-essential \
     wget \
     make \
     python-dev \
@@ -14,12 +15,12 @@ RUN apt-get update && apt-get install -y  \
     libfreetype6-dev \
     libjpeg-dev \
     libpng12-dev \
-    uwsgi-plugin-python \
     --no-install-recommends
 
-RUN pip install virtualenv
+RUN pip install virtualenv uwsgi
 ADD init /init
 
+# Setup app user.
 RUN useradd --create-home app
 USER app
 WORKDIR /home/app
