--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -12,10 +12,10 @@ RUN apt-get update && apt-get install -y  \
     python-dev \
     python-pip \
     python-psycopg2 \
+    python-lxml \
     libfreetype6-dev \
     libjpeg-dev \
     libpng12-dev \
-    libxml2-dev \
     --no-install-recommends
 
 RUN pip install virtualenv uwsgi
