--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,10 +5,12 @@
 FROM       debian:jessie
 MAINTAINER Andrey Petrov "andrey.petrov@shazow.net"
 
-RUN apt-get update && apt-get install -y  \
+RUN apt-get update
+RUN apt-get install -y \
     ca-certificates \
     nginx \
-    --no-install-recommends
+    --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY conf.d/* /etc/nginx/conf.d/
 
