--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -28,7 +28,7 @@ ADD init /init
 RUN useradd --create-home app
 USER app
 WORKDIR /home/app
-RUN virtualenv /home/app/env
+RUN virtualenv --system-site-packages /home/app/env
 
 EXPOSE  3031
 VOLUME  ["/home/app/src", "/home/app/env"]
